# Histogramas

./: CMakeLists.txt  README.md  main_bm.cpp
benchmarks/: CMakeLists.txt
cmake/: DownloadProject.CMakeLists.cmake.in
histograms/: estandar.cpp  estandar.h  estandar_reduction.cpp  estandar_reduction.h  histogram.h  openmp_atomic.cpp  openmp_atomic.h  openmp_critical.cpp  openmp_critical.h  openmp_lock_guard.cpp  openmp_lock_guard.h  openmp_lock_unlock.cpp  openmp_lock_unlock.h  openmp_ompatomic.cpp  openmp_ompatomic.h  openmp_reduction.cpp  openmp_reduction.h  sequential.cpp  sequential.h
test/: CMakeLists.txt  validation_test.cpp
