FILE(GLOB_RECURSE ALL_BENCH_CPP *.cpp)

INCLUDE_DIRECTORIES(../histograms)
FIND_PACKAGE(OpenMP REQUIRED)

foreach(ONE_BENCH_CPP ${ALL_BENCH_CPP})
  GET_FILENAME_COMPONENT(ONE_BENCH_EXEC ${ONE_BENCH_CPP} NAME_WE)

  SET(TARGET_NAME Bench_${ONE_BENCH_EXEC})
  ADD_EXECUTABLE(${TARGET_NAME} ${ONE_BENCH_CPP})
  SET_TARGET_PROPERTIES(${TARGET_NAME}  PROPERTIES OUTPUT_NAME ${ONE_BENCH_EXEC})

  IF(OpenMP_CXX_FOUND)
    TARGET_LINK_LIBRARIES(${TARGET_NAME} OpenMP::OpenMP_CXX)
  ENDIF()

  TARGET_LINK_LIBRARIES(${TARGET_NAME}
    benchmark
    histograms
    ${DEPS}
  )

endforeach()
